; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_texture_create_from_file.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/graphics/extr_graphics.c_gs_texture_create_from_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @gs_texture_create_from_file(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %8 = load i8*, i8** %2, align 8
  %9 = call i32* @gs_create_texture_file_data(i8* %8, i32* %3, i32* %4, i32* %5)
  store i32* %9, i32** %6, align 8
  store i32* null, i32** %7, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %3, align 4
  %16 = call i32* @gs_texture_create(i32 %13, i32 %14, i32 %15, i32 1, i32** %6, i32 0)
  store i32* %16, i32** %7, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @bfree(i32* %17)
  br label %19

19:                                               ; preds = %12, %1
  %20 = load i32*, i32** %7, align 8
  ret i32* %20
}

declare dso_local i32* @gs_create_texture_file_data(i8*, i32*, i32*, i32*) #1

declare dso_local i32* @gs_texture_create(i32, i32, i32, i32, i32**, i32) #1

declare dso_local i32 @bfree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
